# sscli

./: .gitignore  .gitmodules  CMakeLists.txt  configure-editline.sh
.github/: main.workflow
src/: cli.c
